--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,10 +1,10 @@
-<div th:fragment="header" xmlns:th="http://www.w3.org/1999/xhtml">
+<div th:fragment="header">
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
     <h5 class="my-0 mr-md-auto font-weight-normal">Blog</h5>
     <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="#">main</a>
-        <a class="p-2 text-dark" href="#">blog</a>
-        <a class="p-2 text-dark" href="#">about</a>
+        <a class="p-2 text-dark" href="/">main</a>
+        <a class="p-2 text-dark" href="blog">blog</a>
+        <a class="p-2 text-dark" href="about">about</a>
     </nav>
 </div>
 </div>
