--- a/src/main/resources/templates/blog-Main.html
+++ b/src/main/resources/templates/blog-Main.html
@@ -12,14 +12,6 @@
 <div class="container mt-5">
     <h1>BLog</h1>
 </div>
-<footer class="text-muted">
-    <div class="container">
-        <p class="float-right">
-            <a href="#">Back to top</a>
-        </p>
-        <p>Album example is © Bootstrap, but please download and customize it for yourself!</p>
-        <p>New to Bootstrap? <a href="https://getbootstrap.com/">Visit the homepage</a> or read our <a href="/docs/4.5/getting-started/introduction/">getting started guide</a>.</p>
-    </div>
-</footer>
+<div  th:insert="blocks/footer::footer"></div>
 </body>
 </html>
