--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,14 +6,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     </head>
 <body>
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-    <h5 class="my-0 mr-md-auto font-weight-normal">Blog</h5>
-    <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="#">main</a>
-        <a class="p-2 text-dark" href="#">blog</a>
-        <a class="p-2 text-dark" href="#">about</a>
-    </nav>
-</div>
+<header th:insert="blocks/header::header"></header>
 <main role="main">
 
     <section class="jumbotron text-center">
@@ -172,14 +165,6 @@
         </div>
     </div>
 </main>
-<footer class="text-muted">
-    <div class="container">
-        <p class="float-right">
-            <a href="#">Back to top</a>
-        </p>
-        <p>Album example is © Bootstrap, but please download and customize it for yourself!</p>
-        <p>New to Bootstrap? <a href="https://getbootstrap.com/">Visit the homepage</a> or read our <a href="/docs/4.5/getting-started/introduction/">getting started guide</a>.</p>
-    </div>
-</footer>
+<div th:insert="blocks/header::header"></div>
 </body>
 </html>
