--- a/src/main/resources/templates/blog-Main.html
+++ b/src/main/resources/templates/blog-Main.html
@@ -6,11 +6,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-
-</body>
 <header th:insert="blocks/header::header"></header>
 <div class="container mt-5">
     <h1>BLog</h1>
+    <div th:each="el : ${posts}" class="alert alert-info mt-2">
+        <h3 th:text="${el.title}"></h3>
+        <p th:text="${el.anons}"></p>
+        <a th:href="'/blog/'+${el.id}">detailed</a>
+    </div>
 </div>
 <div  th:insert="blocks/footer::footer"></div>
 </body>
