--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -4,6 +4,7 @@
     <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="/">main</a>
         <a class="p-2 text-dark" href="blog">blog</a>
+        <a class="p-2 text-dark" href="blog/add">add article</a>
         <a class="p-2 text-dark" href="about">about</a>
     </nav>
 </div>
