--- a/src/main/resources/templates/blog_add.html
+++ b/src/main/resources/templates/blog_add.html
@@ -7,13 +7,14 @@
 </head>
 <body>
 <header th:insert="blocks/header::header"></header>
-<div class="container mt-5">
+<div class="container mt-5 mb-5">
     <h1>Add article</h1>
-    <form action="/blog/add" method="post"></form>
-<input type="text" name="title" placeholder="add title of the article" class="form-control">
-    <input type="text" name="anons" placeholder="add anons of the article" class="form-control">
-    <textarea  name="full_text" placeholder="add text of the article" class="form-control"></textarea>
+    <form action="/blog/add" method="post">
+<input type="text" name="title" placeholder="add title of the article" class="form-control"><br>
+    <input type="text" name="anons" placeholder="add anons of the article" class="form-control"><br>
+    <textarea  name="full_text" placeholder="add text of the article" class="form-control"></textarea><br>
     <button type="submit" class="btn btn-success">Add article</button>
+    </form>
 </div>
 <div  th:insert="blocks/footer::footer"></div>
 </body>
