blod delete article

--- a/src/main/resources/templates/blog_details.html
+++ b/src/main/resources/templates/blog_details.html
@@ -12,8 +12,11 @@
         <h1 th:text="${el.title}"></h1>
         <p th:text="${el.full_text}"></p>
         <p><b>Views:</b> <span th:text="${el.views}"/></p>
-        <a th:href="'/blog/'+${el.id}+'/edit'"class="btn btn-warning">edit</a>
-        <a th:href="'/blog/'+${el.id}+'/remove'"class="btn btn-warning">delete</a>
+        <a th:href="'/blog/'+${el.id}+'/edit'"class="btn btn-warning">edit</a><br><br>
+        <form th:action="'/blog/'+${el.id}+'/remove'"method="post">
+            <button class="btn btn-warning" type="submit">Delete</button>
+        </form>
+
     </div>
 </div>
 <div  th:insert="blocks/footer::footer"></div>
